--- a/assets/sounds/bingobuzz/manifest.json
+++ b/assets/sounds/bingobuzz/manifest.json
@@ -1,21 +1,216 @@
 {
   "version": 1,
   "ttlHours": 3,
-  "formats": ["webm", "mp3"],
-  "basePath": "assets/sounds/bingobuzz",
+  "formats": ["mp3"],
+  "basePath": "assets/sounds/bingobuzz/NonCommerseLicense",
   "normalization": {
     "targetLufs": -14,
     "peakDbtp": -1
   },
-  "manifestEtag": "dev-seed",
+  "manifestEtag": "nc-pack-v1",
   "files": [
     {
-      "id": "sample_celebration",
-      "src": "sample_celebration",
-      "category": "fanfare",
+      "id": "anei-jeg-mener-a-ja-bingo",
+      "src": "ANeiJegMenerAJaBingo",
+      "category": "voice",
       "gain": 0,
-      "durationHintMs": 2000,
-      "etag": "sample-v1"
+      "etag": "ANeiJegMenerAJaBingo-v1"
+    },
+    {
+      "id": "bingo-en-opera-jingle-a",
+      "src": "BINGOEnOperajingle",
+      "category": "jingle",
+      "gain": 0,
+      "etag": "BINGOEnOperajingle-v1"
+    },
+    {
+      "id": "bingo-en-opera-jingle-b",
+      "src": "BINGOEnOperajingle1",
+      "category": "jingle",
+      "gain": 0,
+      "etag": "BINGOEnOperajingle1-v1"
+    },
+    {
+      "id": "bingo-baby-a",
+      "src": "BingoBaby",
+      "category": "music",
+      "gain": 0,
+      "etag": "BingoBaby-v1"
+    },
+    {
+      "id": "bingo-baby-b",
+      "src": "BingoBaby1",
+      "category": "music",
+      "gain": 0,
+      "etag": "BingoBaby1-v1"
+    },
+    {
+      "id": "bingo-bash-a",
+      "src": "BingoBash",
+      "category": "music",
+      "gain": 0,
+      "etag": "BingoBash-v1"
+    },
+    {
+      "id": "bingo-bash-b",
+      "src": "BingoBash1",
+      "category": "music",
+      "gain": 0,
+      "etag": "BingoBash1-v1"
+    },
+    {
+      "id": "bingo-beat-a",
+      "src": "BingoBeat",
+      "category": "music",
+      "gain": 0,
+      "etag": "BingoBeat-v1"
+    },
+    {
+      "id": "bingo-beat-b",
+      "src": "BingoBeat1",
+      "category": "music",
+      "gain": 0,
+      "etag": "BingoBeat1-v1"
+    },
+    {
+      "id": "bingo-fever-a",
+      "src": "BingoFever",
+      "category": "music",
+      "gain": 0,
+      "etag": "BingoFever-v1"
+    },
+    {
+      "id": "bingo-fever-b",
+      "src": "BingoFever1",
+      "category": "music",
+      "gain": 0,
+      "etag": "BingoFever1-v1"
+    },
+    {
+      "id": "bingo-jingle-a",
+      "src": "BingoJingle",
+      "category": "jingle",
+      "gain": 0,
+      "etag": "BingoJingle-v1"
+    },
+    {
+      "id": "bingo-jingle-b",
+      "src": "BingoJingle1",
+      "category": "jingle",
+      "gain": 0,
+      "etag": "BingoJingle1-v1"
+    },
+    {
+      "id": "bingo-jingle-c",
+      "src": "BingoJingle2",
+      "category": "jingle",
+      "gain": 0,
+      "etag": "BingoJingle2-v1"
+    },
+    {
+      "id": "bingo-jingle-d",
+      "src": "BingoJingle3",
+      "category": "jingle",
+      "gain": 0,
+      "etag": "BingoJingle3-v1"
+    },
+    {
+      "id": "bingo-showstopper-a",
+      "src": "BingoShowstopper",
+      "category": "jingle",
+      "gain": 0,
+      "etag": "BingoShowstopper-v1"
+    },
+    {
+      "id": "bingo-showstopper-b",
+      "src": "BingoShowstopper1",
+      "category": "jingle",
+      "gain": 0,
+      "etag": "BingoShowstopper1-v1"
+    },
+    {
+      "id": "ja-takk",
+      "src": "JATAKK",
+      "category": "voice",
+      "gain": 0,
+      "etag": "JATAKK-v1"
+    },
+    {
+      "id": "jeg-fikk-bingo-a",
+      "src": "JegFikkBingo",
+      "category": "voice",
+      "gain": 0,
+      "etag": "JegFikkBingo-v1"
+    },
+    {
+      "id": "jeg-fikk-bingo-b",
+      "src": "JegFikkBingo1",
+      "category": "voice",
+      "gain": 0,
+      "etag": "JegFikkBingo1-v1"
+    },
+    {
+      "id": "jeg-skal-ha-gull-a",
+      "src": "JegSkalHaGull",
+      "category": "voice",
+      "gain": 0,
+      "etag": "JegSkalHaGull-v1"
+    },
+    {
+      "id": "jeg-skal-ha-gull-b",
+      "src": "JegSkalHaGull1",
+      "category": "voice",
+      "gain": 0,
+      "etag": "JegSkalHaGull1-v1"
+    },
+    {
+      "id": "kake-til-meg-a",
+      "src": "KakeTilMeg",
+      "category": "voice",
+      "gain": 0,
+      "etag": "KakeTilMeg-v1"
+    },
+    {
+      "id": "kake-til-meg-b",
+      "src": "KakeTilMeg1",
+      "category": "voice",
+      "gain": 0,
+      "etag": "KakeTilMeg1-v1"
+    },
+    {
+      "id": "premie-jeg-fikk-premie-a",
+      "src": "PREMIEJEGFIKKPREMIE",
+      "category": "voice",
+      "gain": 0,
+      "etag": "PREMIEJEGFIKKPREMIE-v1"
+    },
+    {
+      "id": "premie-jeg-fikk-premie-b",
+      "src": "PREMIEJEGFIKKPREMIE1",
+      "category": "voice",
+      "gain": 0,
+      "etag": "PREMIEJEGFIKKPREMIE1-v1"
+    },
+    {
+      "id": "premie-jubel-a",
+      "src": "Premiejubel",
+      "category": "cheer",
+      "gain": 0,
+      "etag": "Premiejubel-v1"
+    },
+    {
+      "id": "premie-jubel-b",
+      "src": "Premiejubel1",
+      "category": "cheer",
+      "gain": 0,
+      "etag": "Premiejubel1-v1"
+    },
+    {
+      "id": "woohoo-revolt",
+      "src": "WoohooRevolt",
+      "category": "cheer",
+      "gain": 0,
+      "etag": "WoohooRevolt-v1"
     }
   ]
 }
