--- a/assets/sounds/bingobuzz/manifest.json
+++ b/assets/sounds/bingobuzz/manifest.json
@@ -9,7 +9,7 @@
     "targetLufs": -14,
     "peakDbtp": -1
   },
-  "manifestEtag": "nc-pack-v3",
+  "manifestEtag": "nc-pack-v4",
   "files": [
     {
       "id": "anei_jeg_mener_a_ja_bingo",
@@ -218,6 +218,22 @@
       "category": "voice",
       "gain": 0,
       "etag": "PREMIEJEGFIKKPREMIE1-v1"
+    },
+    {
+      "display": "Premiejakten A",
+      "id": "premiejakten_a",
+      "src": "Premiejakten_A",
+      "category": "music",
+      "gain": 0,
+      "etag": "PremiejaktenA-v1"
+    },
+    {
+      "display": "Premiejakten B",
+      "id": "premiejakten_b",
+      "src": "Premiejakten_B",
+      "category": "music",
+      "gain": 0,
+      "etag": "PremiejaktenB-v1"
     },
     {
       "display": "Hvor Er Premie - Jeg Fikk Premie",
